# CapstoneProject

./: README.md
AppAndroid/src/: App.js
Gateway-Nodecontrol-Esp32/: sdkconfig.old
Gateway-Nodecontrol-Esp32/main/: CMakeLists.txt  Kconfig.projbuild
Gateway-Nodecontrol-Esp32/main/Inc/: bluetooth.h  rtc_internal.h  rtc_pcf8563.h  schedule.h  spiffs.h  wifi.h
Gateway-Nodecontrol-Esp32/main/Src/: app_uart.c  bluetooth.c  lora_e32.c  mlsOnboard.c  rtc_internal.c  rtc_pcf8563.c  spiffs.c  util.c  wifi.c
Gateway_Nodecontrol/: README.md  sdkconfig
Gateway_Nodecontrol/.text/: #text.txt
Gateway_Nodecontrol/main/: app_main.c  app_main.h
IoTGarden_Laravel/: package-lock.json
IoTGarden_Laravel/routes/: api.php
NodeSensor/App/: uart.c
NodeSensor/MDK-ARM/: startup_stm32f103xb.lst
NodeSensor/Mylib/: min.h  mk_dht11.h  ringbuff.h
Nodesensor1-STM32F103/App/: sensor.c  sensor.h  uart.h
Nodesensor1-STM32F103/MDK-ARM/: Project_summer.uvguix.TuanTu  Project_summer.uvoptx  Project_summer.uvprojx
Nodesensor1-STM32F103/Mylib/: YL-69.c  YL-69.h  bh1750.h  dht11.h
Nodesensor2-STM32F103/: Project_summer.ioc
Nodesensor2-STM32F103/App/: sensor.h  uart.c  uart.h
Nodesensor2-STM32F103/MDK-ARM/: Project_summer.uvoptx
Nodesensor2-STM32F103/Mylib/: SimpleKalmanFilter.c  SimpleKalmanFilter.h  bh1750.c  delay_timer.c  ringbuff.c
Nodesensor_area_2/App/: sensor.c
Nodesensor_area_2/MDK-ARM/: Project_summer.uvguix.TuanTu
Nodesensor_area_2/Mylib/: DHT.c  delay_timer.h  util.c  (+2 more)
WebAplication/: package.json
Web_IoTGarden_Laravel/: READMEFORMYSELF.text  composer.json
(+140 files in other folders)
