idf_component_register(SRCS "app_main.c" "Src/bluetooth.c" "Src/mqtt.c" "Src/util.c" "Src/spiffs" "Src/rtc_pcf8563" "Src/rtc_internal" "Src/schedule" "Src/mlsOnboard" "Src/app_uart" "Src/lora_e32" "Src/GPIO" "Src/min" "Src/wifi"
INCLUDE_DIRS "D:/esp/Espressif/frameworks/.gitTesting/main/Inc" )  ## My path
##INCLUDE_DIRS "C:/Espressif/frameworks/lora_farm/main/Inc" )    ## work at company
